Projet GL/Projet_GL/src/test/deca/context/valid/increment5/two-pass-needed.deca
// Test which need two passes to work

// Historique : cree le 18/01/2023

class A{
    B b;
}

class B{
    A a;
}

