Projet GL/Projet_GL/src/test/deca/context/invalid/increment1/bool-eq-1.deca
// Test bool = 1

// Historique : cree le 11/01/2023

{
    boolean a = 1;

    a = true;
}